syntax = "proto3";

package calendar;

option go_package = "calendar";

import  "google/protobuf/timestamp.proto";



service Calendar {
    rpc CreateEvent (CreateEventReq) returns (CreateEventRes);
    rpc GetEvent (GetEventReq) returns (GetEventRes);
    rpc UpdateEvent (UpdateEventReq) returns (UpdateEventRes);
}


message Event {
    uint64 UUID = 1;
    string Title = 2;
    string Description = 3;
    google.protobuf.Timestamp CreatedAt = 4;
    uint64 UserId = 5;
}


message CreateEventReq {
    Event event = 1;
}

message CreateEventRes {
    int64 UUID = 1;
    bool created = 2;
}

message GetEventReq {
    int64 UUID = 1;
}

message GetEventRes {
    Event event = 1;
    bool getted = 2;
}

message UpdateEventReq {
    Event event = 1;
}

message UpdateEventRes {
    Event event = 1;
    bool updated = 2;
}